[package]
name = "reqwest"
version = "0.6.2"
description = "higher level HTTP client library"
keywords = ["http", "request", "client"]
repository = "https://github.com/seanmonstar/reqwest"
documentation = "https://docs.rs/reqwest"
authors = ["Sean McArthur <sean.monstar@gmail.com>"]
license = "MIT/Apache-2.0"
categories = ["web-programming::http-client"]

[dependencies]
hyper = "0.10.2"
hyper-rustls = { version = "0.5.0", optional = true }
hyper-native-tls = { version = "0.2", optional = true }
libflate = "0.1.5"
log = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.5"
url = "1.2"
error-chain = "0.10"

[dev-dependencies]
env_logger = "0.4"
serde_derive = "1.0"

[features]
default = ["native-tls"]
native-tls = ["hyper-native-tls"]
rustls = ["hyper-rustls"]